--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 </head>
 <body>
+  <a href="https://jjohnson55555.github.io/Dev3-box-model/" target="_blank">See the code!</a>
 <!-- partial:index.partial.html -->
 <!--<div id ="containerBox">
   
